# isotherm_adsorption_computations_tensorflow

./: .gitignore  Data_inspection_new.ipynb  MLP-Copy1.ipynb  Test.ipynb  model_1000_mae47_maxerror-119.keras  model_100_mae81_maxerror-172.keras  pyproject.toml
.ipynb_checkpoints/: Data-checkpoint.ipynb  MLP-Copy1-checkpoint.ipynb  MLP-checkpoint.ipynb  Statistic-checkpoint.ipynb  Test-checkpoint.ipynb  all_data_stare-checkpoint.csv
Data/: 1_Preprocesed_data.ipynb  2_Data_v3.ipynb  BET_surface_area.ipynb  Data_inspection_new.ipynb  Data_new.ipynb  Data_v2.ipynb  Statistic.ipynb
Data/.ipynb_checkpoints/: 1_Preprocesed_data-checkpoint.ipynb  BET_surface_area-checkpoint.ipynb  Data_v2-checkpoint.ipynb  all_data-checkpoint.csv
models/1_regresja_bet/: 1_liniowa.ipynb  2_SGDRegressor.ipynb  4_Lasso.ipynb  BET_wszystkie_modele.ipynb
models/1_regresja_bet/.ipynb_checkpoints/: 1_liniowa-checkpoint.ipynb  5_elasticnet-checkpoint.ipynb  6_k_nearet-checkpoint.ipynb  7_SVM-checkpoint.ipynb  (+2 more)
models/2_regresja_total_pore_volume/: Main_notebook_total_volume.ipynb
models/MLP/: MLP-Copy1.ipynb  MLP_3_variable_output.ipynb  MLP_3_variable_output_new_data.ipynb  MLP_BET.ipynb  MLP_Micropore_volume.ipynb  MLP_total_pore_volume.ipynb  model_1000_mae62_maxerror-233.keras  model_500_mae38_maxerror-90.keras
models/klasyfikacja_typu_izotermy/: test.dot  wwstepnie.ipynb
stare/: Data.ipynb  MLP.ipynb  MLP_zmienieone.ipynb
stare/.ipynb_checkpoints/: Data-checkpoint.ipynb  Data_new_kopia-checkpoint.ipynb  MLP-checkpoint.ipynb  all_artcles-checkpoint.json
(+25 files in other folders)
